service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api
  namespace: default
spec:
  ports:
  - port: 8181
    protocol: TCP
    targetPort: 8181
  selector:
    app: products-api
  sessionAffinity: None
  type: ClusterIP
