virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: products-api-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "products-api-vs"
spec:
  hosts:
  - "*"
  gateways:
  - products-api-gateway
  http:
  - match:
    - uri:
        prefix: /products
    route:
    - destination:
        host: "products-api"
        port:
          number: 8181
